--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "dev": "nodemon --config nodemon.json src/index.ts",
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts",
     "lint": "eslint . --ext .ts",
-    "build": "tsc"
+    "build": "tsc",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/node": "^16.10.3",
-    "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
@@ -26,9 +26,6 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "sequelize": "^7.0.0-alpha.4",
-    "sqlite3": "^5.0.2",
     "steam-server-query": "^1.1.0"
   }
 }
